# agri-core

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  ONBOARDING.md  README.md  pyproject.toml
.github/workflows/: auto-assign.yml  ci.yml  lint-pr-title.yml  primary.yml  release.yml
docs/: INDEX.md
src/agri/core/: __init__.py  _version.py  agronomy.py  alerts.py  calibration.py  et_forecast.py  notifications.py
src/agri/core/database/: __init__.py  client.py  config.py  session.py
tests/: test_agronomy.py  test_agronomy_db.py  test_alerts.py  test_alerts_db.py  test_calibration.py  test_database.py  test_database_hourly.py  test_et_forecast.py  test_fao56.py  test_field_snapshot_db.py  test_notifications.py  test_notifications_db.py  test_smoke.py
