[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agri-core"
version = "0.4.0"
description = "Framework-agnostic business logic and HTTP endpoint handlers for the Agrilogy backend. Shared by agri-api today; usable by a future FastAPI service or standalone ingest worker without modification."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

# ---------------------------------------------------------------------------
# Packaging — src/ layout. The package is the namespace pair `agri.core`,
# so downstream code imports `from agri.core import ...` (matches the
# `from agri.db import ...` pattern used by the sibling agri-db repo).
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agri.core" = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pyflakes / pycodestyle
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "SIM",              # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["agri.core"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
