[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agri-core"
version = "0.4.0"
description = "Framework-agnostic business logic and HTTP endpoint handlers for the Agrilogy backend. Shared by agri-api today; usable by a future FastAPI service or standalone ingest worker without modification."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    # The schema-of-record. Supplies the SQLAlchemy ORM models that
    # agri.core.database queries. Resolved from the sibling checkout via
    # [tool.uv.sources] below — no versioning/tags (solo dev). Mirrors the
    # revly-core → data-model chain. psycopg arrives transitively through
    # agri-db; sqlalchemy is also pinned explicitly since this package
    # imports it directly.
    "agri-db",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

# ---------------------------------------------------------------------------
# Local path dependency (no versioning — see project memory
# `agri-core-architecture`). The Docker build context in agri-api must span
# the sibling repos so this path resolves at image-build time too.
# ---------------------------------------------------------------------------
[tool.uv.sources]
agri-db = { path = "../agri-db", editable = true }

# ---------------------------------------------------------------------------
# Packaging — src/ layout. The package is the namespace pair `agri.core`,
# so downstream code imports `from agri.core import ...` (matches the
# `from agri.db import ...` pattern used by the sibling agri-db repo).
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agri.core" = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pyflakes / pycodestyle
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "SIM",              # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["agri.core", "agri.db"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
