[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agri-core"
dynamic = ["version"]  # sourced from agri.core._version; owned by semantic-release
description = "Framework-agnostic business logic and HTTP endpoint handlers for the Agrilogy backend. Shared by agri-api today; usable by a future FastAPI service or standalone ingest worker without modification."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    # The schema-of-record (SQLAlchemy ORM models that agri.core.database
    # queries). Pinned by git tag — full Revly, mirrors revly-core →
    # data-model@<tag>. agri-db is PRIVATE, so CI/Docker need a read-only PAT
    # (AGRI_DB_RO_TOKEN) configured as a git credential for `uv sync` to
    # fetch it. For local co-dev against an unreleased agri-db, override with
    # `uv pip install -e ../agri-db`. sqlalchemy is pinned explicitly since
    # this package imports it directly (psycopg arrives transitively).
    "agri-db @ git+https://github.com/AgriLogy/agri-db.git@0.6.0",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

# ---------------------------------------------------------------------------
# Packaging — src/ layout. The package is the namespace pair `agri.core`,
# so downstream code imports `from agri.core import ...` (matches the
# `from agri.db import ...` pattern used by the sibling agri-db repo).
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agri.core" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "agri.core._version.__version__" }

# ---------------------------------------------------------------------------
# python-semantic-release — same setup as agri-db. agri-core is consumed by
# tagged git URL (agri-api pins `agri-core @ git+…@<tag>`), so the tag format
# is BARE `{version}`, matching revly-core. No build step (consumed by tag,
# not as a wheel; the PSR action's container lacks project tools anyway).
# ---------------------------------------------------------------------------
[tool.semantic_release]
tag_format = "{version}"
version_variables = ["src/agri/core/_version.py:__version__"]
build_command = ""
commit_message = "{version}\n\n[skip ci] automatically generated by python-semantic-release"
major_on_zero = false
logging_use_named_masks = false

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.rc]
match = "^(feat|fix|perf)/.+"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "MKS~ZAK <60817481+mks-zakaria@users.noreply.github.com>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pyflakes / pycodestyle
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "SIM",              # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["agri.core", "agri.db"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
